# src/api/validations/orderItemValidations.js
@@ -1,4 +1,6 @@
 const { OrderItemStatus } = require('@prisma/client');
+const Joi = require('joi');
+const baseValidation = require("./baseValidation")
 
 // Validator function
 exports.validateStatusFilters = (filterString) => {
@@ -19,4 +21,18 @@ exports.validateNumberList = (inputString) => {
     // Use a regular expression to match a string with numbers separated by commas
     const pattern = /^\d+(,\d+)*$/;
     return pattern.test(inputString);
-  };
+};
+
+exports.isValidExpireOrderItemPayload = (payload) => {
+    const schema = Joi.object({
+        beforeDate: baseValidation.dateTimeValidation('beforeTime').optional()
+    });
+
+    const { error } = schema.validate(payload, { convert: false });
+    if (error) {
+        console.log(error);
+        return { isValid: false, message: error.details[0].message };
+    }
+
+    return { isValid: true };
+};
